<resources>
    <string name="app_name">Marcador de Truco</string>
    <string name="titulo_inicial">Marcador de Truco</string>

    <string name="jogador1">Jogador 1</string>
    <string name="jogador2">Jogador 2</string>
    <string name="vantagem">VANTAGEM</string>

    <string name="nome_jogador1">Nome do Jogador 1</string>
    <string name="ex_jogador1">Ex: Jogador 1</string>
    <string name="nome_jogador2">Nome do Jogador 2</string>
    <string name="ex_jogador2">Ex: Jogador 2</string>

    <string name="placar_jogador">%1$s: %2$d</string>

    <string name="mais_1">+1</string>
    <string name="mais_3">+3</string>
    <string name="mais_6">+6</string>
    <string name="mais_9">+9</string>
    <string name="mais_12">+12</string>

    <string name="mensagem_vencedor">O vencedor foi: %1$s!</string>
    <string name="fim_partida">Fim de Partida!</string>

    <string name="historico_jogadas">Histórico</string>
    <string name="partidas_ganhas">%1$d Partidas Ganhas</string>

    <string name="limpar">Limpar</string>
    <string name="mensagem_historico">Histórico e pontuações resetados com sucesso!</string>

    <string name="nomes">Nomes</string>
    <string name="titulo_equipes">Informar Nomes</string>
    <string name="sub_titulo_equipes">Defina os duelistas da partida</string>
    <string name="confirmar">CONFIRMAR</string>

    <string name="titulo_historico">Histórico de Jogadas</string>
    <string name="sub_titulo_historico">Estatísticas acumuladas da sessão atual</string>
    <string name="placar_zerado">0</string>
</resources>